--- a/La Ñata/Views/Home/Index.cshtml
+++ b/La Ñata/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <hr class="pb-3" />
 
 <div class="container-fluid d-flex flex-row row justify-content-center">
-    <a href="#" class="data-card">
+    <a href="Orders/Create" class="data-card">
         <h3>Crear</h3>
         <h4>Nuevo pedido</h4>
         <span class="link-text">
