--- a/La Ñata/Views/Products/Edit.cshtml
+++ b/La Ñata/Views/Products/Edit.cshtml
@@ -5,8 +5,12 @@
 }
 
 <link href="~/Content/notification.css" rel="stylesheet" />
-
-<h1 class="text-center">Editar producto</h1>
+<div class="d-flex align-items-end">
+    <a class="btn btn-dark" href="../../Products"><i class="bi bi-arrow-left"></i></a>
+    <div class="d-flex flex-grow-1 justify-content-center" style="margin-right: 70px">
+        <h1 class="text-center">Editar producto</h1>
+    </div>
+</div>
 <hr class="pb-3" />
 
 @{ if (ViewBag.Message != null)
@@ -64,7 +68,6 @@
     }
 </div>
 
-<a class="btn btn-dark" href="../../Products/Index">Volver</a>
 
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
