--- a/La Ñata/Views/Products/Index.cshtml
+++ b/La Ñata/Views/Products/Index.cshtml
@@ -10,7 +10,7 @@
 <link href="~/Content/products.css" rel="stylesheet" />
 <link href="~/Content/table.css" rel="stylesheet" />
 
-<h1 class="text-center">Ventas</h1>
+<h1 class="text-center">Stock</h1>
 <hr class="mb-3" />
 
 
