--- a/La Ñata/Views/Shared/_Layout.cshtml
+++ b/La Ñata/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                         <a class="nav-link" id="ProductsLink" href="/Products"><i class="bi bi-box-seam"></i>Stock</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="OrderLink" href="#"><i class="bi bi-card-list"></i>Pedidos</a>
+                        <a class="nav-link" id="OrdersLink" href="/Orders"><i class="bi bi-card-list"></i>Pedidos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="ExpenseLink" href="#"><i class="bi bi-cash"></i>Gastos</a>
