--- a/La Ñata/Views/Orders/Create.cshtml
+++ b/La Ñata/Views/Orders/Create.cshtml
@@ -1,91 +1,99 @@
 ﻿@model La_Ñata.Models.Order
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Pedido";
+    List<La_Ñata.Models.ProductOrder> products = Session["Order"] as List<La_Ñata.Models.ProductOrder>;
 }
 
-<h2>Create</h2>
+<link href="~/Content/notification.css" rel="stylesheet" />
+<link href="~/Content/table.css" rel="stylesheet" />
+<link href="~/Content/daterangepicker.css" rel="stylesheet" />
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Order</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.client_name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.client_name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.client_name, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.phone, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.phone, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.phone, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.event_adress, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.event_adress, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.event_adress, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.date, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.shipment_price, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.shipment_price, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.shipment_price, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.observation, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.observation, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.observation, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.created_at, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.created_at, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.created_at, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.deleted_at, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.deleted_at, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.deleted_at, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
+<div class="d-flex align-items-end">
+    <a class="btn btn-dark" href="../../Orders"><i class="bi bi-arrow-left"></i></a>
+    <div class="d-flex flex-grow-1 justify-content-center" style="margin-right: 70px">
+        <h1 class="text-center">Crear pedido</h1>
     </div>
+</div>
+<hr class="pb-3" />
+
+@{ if (ViewBag.Message != null)
+    {
+        <div class="py-3 mb-5 @(ViewBag.Error == 1 ? "containerError1" : "")@(ViewBag.Error == 2 ? "containerError2" : "")@(ViewBag.Error == null ? "onlyMessage" : "")" id="notificationContainer">
+            <div class="px-2 d-flex flex-row justify-content-between align-items-center">
+                <div id="txtNotification">@ViewBag.Message</div>
+                <button id="btnCloseNotification" type="button" aria-label="Cerrar">
+                    <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-x">
+                        <path id="closeSVG" fill="rgb(0,75,180)" class="@(ViewBag.Error == 1 ? "error1" : "") @(ViewBag.Error == 2 ? "error2" : "") @(ViewBag.Error == null ? "onlyMessage" : "")" d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"></path>
+                    </svg>
+                </button>
+            </div>
+        </div>
+    }
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+<div class="container d-flex justify-content-center p-5 mt-5" id="formContainer">
+    @using (Html.BeginForm("AddProducts", "Orders", FormMethod.Post, new { @class = "mx-auto " }))
+    {
+        @Html.AntiForgeryToken()
+
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div>
+            @Html.LabelFor(model => model.date, "Fecha", htmlAttributes: new { @class = "control-label" })
+            @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control", @id = "datepicker" } })
+            @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger mb-4 mt-3" })
+        </div>
+
+        <div>
+            @Html.LabelFor(model => model.client_name, "Cliente", htmlAttributes: new { @class = "control-label" })
+            @Html.EditorFor(model => model.client_name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.client_name, "", new { @class = "text-danger mb-4 mt-3" })
+        </div>
+
+        <div>
+            @Html.LabelFor(model => model.phone, "Teléfono", htmlAttributes: new { @class = "control-label" })
+            @Html.EditorFor(model => model.phone, new { htmlAttributes = new { @class = "form-control", @type = "tel" } })
+            @Html.ValidationMessageFor(model => model.phone, "", new { @class = "text-danger mb-4 mt-3" })
+        </div>
+
+        <div>
+            @Html.LabelFor(model => model.event_adress, "Dirección", htmlAttributes: new { @class = "control-label" })
+            @Html.EditorFor(model => model.event_adress, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.event_adress, "", new { @class = "text-danger mb-4 mt-3" })
+        </div>
+
+        <div>
+            @Html.LabelFor(model => model.shipment_price, "Precio flete", htmlAttributes: new { @class = "control-label" })
+            @Html.EditorFor(model => model.shipment_price, new { htmlAttributes = new { @class = "form-control", @type = "number", @min = "0", @step = "0.01" } })
+            @Html.ValidationMessageFor(model => model.shipment_price, "", new { @class = "text-danger mb-4 mt-3" })
+        </div>
+
+        <div>
+            @Html.LabelFor(model => model.observation, "Observaciones", htmlAttributes: new { @class = "control-label" })
+            @Html.TextAreaFor(model => model.observation, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.observation, "", new { @class = "text-danger mb-4 mt-3" })
+        </div>
+
+        <div class="d-flex mt-3">
+            <input type="submit" value="Aceptar" class="btn btn-success flex-grow-1" />
+        </div>
+    }
 </div>
+
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/Scripts/notification.js"></script>
+<script src="~/Scripts/moment-with-locales.js"></script>
+<script src="~/Scripts/daterangepicker.js"></script>
+<script src="~/Scripts/orders_create.js"></script>
+
+<style>
+    #formContainer {
+        -webkit-box-shadow: 0px 0px 36px 8px rgba(194,194,194,1);
+        -moz-box-shadow: 0px 0px 36px 8px rgba(194,194,194,1);
+        box-shadow: 0px 0px 36px 8px rgba(194,194,194,1);
+        max-width: 600px;
+        border-radius: 1rem;
+    }
+</style>
