--- a/La Ñata/Views/Products/Index.cshtml
+++ b/La Ñata/Views/Products/Index.cshtml
@@ -30,7 +30,7 @@
 }
 
 <div class="mb-5 d-flex flex-row">
-    <div class="col-9 mx-auto">
+    <div class="col-xl-9 col-11 mx-auto">
         <div class="sombra p-4 mb-5" style="border-radius: 20px">
             <div id="searchContainer" class="d-flex justify-content-between">
                 <div class="d-flex flex-row">
@@ -49,10 +49,10 @@
                 <table>
                     <thead>
                         <tr class="row100 head">
-                            <th class="text-center column20">Producto</th>
-                            <th class="text-center column10">Stock</th>
-                            <th class="text-center column10">Precio</th>
-                            <th class="text-center column10">Precio por rotura</th>
+                            <th class="text-center py-1 py-lg-3 column20">Producto</th>
+                            <th class="text-center py-1 py-lg-3 column10">Stock</th>
+                            <th class="text-center py-1 py-lg-3 column10">Precio</th>
+                            <th class="text-center py-1 py-lg-3 column10">Precio por rotura</th>
                         </tr>
                     </thead>
                 </table>
