--- a/La Ñata/Views/Orders/Create.cshtml
+++ b/La Ñata/Views/Orders/Create.cshtml
@@ -47,32 +47,26 @@
 
         <div>
             @Html.LabelFor(model => model.client_name, "Cliente", htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.client_name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.client_name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nombre y apellido" } })
             @Html.ValidationMessageFor(model => model.client_name, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
         <div>
             @Html.LabelFor(model => model.phone, "Teléfono", htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.phone, new { htmlAttributes = new { @class = "form-control", @type = "tel" } })
+            @Html.EditorFor(model => model.phone, new { htmlAttributes = new { @class = "form-control", @type = "tel", @placeholder = "Fijo / Celular" } })
             @Html.ValidationMessageFor(model => model.phone, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
         <div>
             @Html.LabelFor(model => model.event_adress, "Dirección", htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.event_adress, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.event_adress, new { htmlAttributes = new { @class = "form-control", @placeholder = "Lugar del evento" } })
             @Html.ValidationMessageFor(model => model.event_adress, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
         <div>
             @Html.LabelFor(model => model.shipment_price, "Precio flete", htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.shipment_price, new { htmlAttributes = new { @class = "form-control", @type = "number", @min = "0", @step = "0.01" } })
+            @Html.EditorFor(model => model.shipment_price, new { htmlAttributes = new { @class = "form-control", @type = "number", @min = "0", @step = "0.01", @placeholder = "$" } })
             @Html.ValidationMessageFor(model => model.shipment_price, "", new { @class = "text-danger mb-4 mt-3" })
-        </div>
-
-        <div>
-            @Html.LabelFor(model => model.observation, "Observaciones", htmlAttributes: new { @class = "control-label" })
-            @Html.TextAreaFor(model => model.observation, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.observation, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
         <div class="d-flex mt-3">
