--- a/La Ñata/Views/Orders/Details.cshtml
+++ b/La Ñata/Views/Orders/Details.cshtml
@@ -16,37 +16,40 @@
 <hr class="pb-3" />
 
 <div class="mb-5 d-flex flex-row">
-    <div class="col-9 mx-auto">
+    <div class="col-12 mx-auto">
         <div class="sombra p-4 mb-5" style="border-radius: 20px">
-            <div id="searchContainer" class="d-flex justify-content-between">
-                <div class="d-flex flex-row">
-                    <div>
+            <div id="searchContainer" class="d-flex flex-lg-column flex-row justify-content-between">
+                <div class="d-flex flex-lg-row flex-column me-2 me-md-0">
+                    <div class="col-xl-3 pe-lg-3">
                         <label class="form-label">Cliente</label>
                         @Html.TextBox("client_name", Model.client_name, new { @class = "form-control py-2", @readonly = "readonly" })
                     </div>
 
-                    <div>
+                    <div class="col-xl-3 pe-lg-3">
                         <label class="form-label">Teléfono</label>
                         @if (Model.phone == null || Model.phone == string.Empty)
                         {
                             @Html.TextBox("phone", "-", new { @class = "form-control py-2 text-center", @readonly = "readonly" })
-                        } else
+                        }
+                        else
                         {
                             @Html.TextBox("phone", Model.phone, new { @class = "form-control py-2", @readonly = "readonly" })
                         }
                     </div>
 
-                    <div>
+                    <div class="col-xl-3 pe-lg-3">
                         <label class="form-label">Dirección</label>
                         @Html.TextBox("event_adress", Model.event_adress, new { @class = "form-control py-2", @readonly = "readonly" })
                     </div>
 
-                    <div>
+                    <div class="col-xl-3">
                         <label class="form-label">Fecha</label>
                         @Html.TextBox("date", Model.date.ToString("dd/MM/yyyy"), new { @class = "form-control py-2", @readonly = "readonly" })
                     </div>
+                </div>
+                <div class="d-flex flex-lg-row mt-lg-3 flex-column justify-content-lg-between">
 
-                    <div>
+                    <div class="col-xl-3">
                         <label class="form-label">Flete</label>
                         @if (Model.shipment_price == null)
                         {
@@ -58,7 +61,7 @@
                         }
                     </div>
 
-                    <div>
+                    <div class="col-xl-3">
                         <label class="form-label">Observaciones</label>
                         @if (Model.observation == null || Model.observation == string.Empty)
                         {
@@ -66,8 +69,45 @@
                         }
                         else
                         {
-                            @Html.TextBox("observation", Model.observation, new { @class = "form-control py-2", @readonly = "readonly" })
+                            @Html.TextArea("observation", Model.observation, new { @class = "form-control py-2", @readonly = "readonly", @rows = "4", @cols = "40" })
                         }
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        @* Botones *@
+        <div class="d-flex flex-lg-row flex-column justify-content-lg-between">
+            <div class="sombra p-4 mb-lg-5 mb-2" style="border-radius: 20px; max-width: fit-content">
+                <div class="d-flex flex-row" style="max-width: fit-content">
+                    <div class="sombra d-flex flex-row me-2 me-sm-5">
+                        <a id="btnSearch" href="#" class="btn" style="background-color: #e06c6c; color: white">
+                            Detalle sin precio
+                            <i class="bi bi-printer" style="color: white"></i>
+                        </a>
+                    </div>
+                    <div class="sombra d-flex flex-row me-2 me-sm-5">
+                        <a id="btnSearch" href="#" class="btn" style="background-color: #e06c6c; color: white">
+                            Detalle con precio
+                            <i class="bi bi-printer" style="color: white"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="sombra p-4 mb-5" style="border-radius: 20px; max-width: fit-content">
+                <div class="d-flex flex-row" style="max-width: fit-content">
+                    <div class="sombra d-flex flex-row me-2 me-sm-5">
+                        <a id="btnSearch" href="../../Orders/Edit/@Model.id" class="btn" style="background-color: #e06c6c; color: white">
+                            Editar
+                            <i class="bi bi-pencil" style="color: white"></i>
+                        </a>
+                    </div>
+                    <div class="sombra d-flex flex-row ms-2 ms-sm-5">
+                        <a id="btnSearch" href="#" class="btn" style="background-color: crimson; color: white">
+                            Eliminar
+                            <i class="bi bi-x-lg" style="color: white"></i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -79,11 +119,11 @@
                 <table>
                     <thead>
                         <tr class="row100 head">
-                            <th class="text-center column20">Producto</th>
-                            <th class="text-center column10">Cantidad</th>
-                            <th class="text-center column10">Precio</th>
-                            <th class="text-center column10">Precio por rotura</th>
-                            <th class="text-center column10">Precio actual</th>
+                            <th class="text-center py-1 py-lg-3 column20">Producto</th>
+                            <th class="text-center py-1 py-lg-3 column10">Cantidad</th>
+                            <th class="text-center py-1 py-lg-3 column10">Precio</th>
+                            <th class="text-center py-1 py-lg-3 column10">Precio por rotura</th>
+                            <th class="text-center py-1 py-lg-3 column10">Precio actual</th>
                         </tr>
                     </thead>
                 </table>
