--- a/La Ñata/Views/Products/Create.cshtml
+++ b/La Ñata/Views/Products/Create.cshtml
@@ -6,8 +6,12 @@
 
 <link href="~/Content/notification.css" rel="stylesheet" />
 
-<h1 class="text-center">Cargar un nuevo producto</h1>
-<hr class="pb-3" />
+<div class="d-flex align-items-end">
+    <a class="btn btn-dark" href="../../Products"><i class="bi bi-arrow-left"></i></a>
+    <div class="d-flex flex-grow-1 justify-content-center" style="margin-right: 70px">
+        <h1 class="text-center">Cargar un nuevo producto</h1>
+    </div>
+</div><hr class="pb-3" />
 
 @{ if (ViewBag.Message != null)
     {
@@ -30,25 +34,25 @@
         @Html.AntiForgeryToken()
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div>
+        <div class="mb-2">
             @Html.LabelFor(model => model.description, "Descripción", htmlAttributes: new { @class = "control-label" })
             @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
-        <div>
+        <div class="mb-2">
             @Html.LabelFor(model => model.stock, "Stock", htmlAttributes: new { @class = "control-label" })
             @Html.EditorFor(model => model.stock, new { htmlAttributes = new { @class = "form-control", @type = "number" } })
             @Html.ValidationMessageFor(model => model.stock, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
-        <div>
+        <div class="mb-2">
             @Html.LabelFor(model => model.price, "Precio", htmlAttributes: new { @class = "control-label" })
             @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control", @type = "number" } })
             @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
-        <div>
+        <div class="mb-2">
             @Html.LabelFor(model => model.break_price, "Precio por rotura", htmlAttributes: new { @class = "control-label" })
             @Html.EditorFor(model => model.break_price, new { htmlAttributes = new { @class = "form-control", @type = "number" } })
             @Html.ValidationMessageFor(model => model.break_price, "", new { @class = "text-danger mb-4 mt-3" })
@@ -59,8 +63,6 @@
         </div>
     }
 </div>
-
-<a class="btn btn-dark" href="../../Products/Index">Volver</a>
 
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
